...
                  height: 15,
                ),
                Row(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    GestureDetector(
                      key: const Key("activateOTP"),
                      onTap: () {
                        Navigator.push(context,
                            MaterialPageRoute(builder: (context) => const Factory2()));
                      },
                      child: Container(
                        width: 170,
...
