...
                  height: 15,
                ),
                Row(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    GestureDetector(
                      key: const Key("getActivationalCode"),
                      onTap: () {
                        Navigator.push(context,
                            MaterialPageRoute(builder: (context) => OTP()));
                      },
                      child: Container(
                        width: 220,
...
